[package]
name = "bevy-game-jam-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
rand = "0.8.5"
bevy_rapier3d = { version = "0.16.2", features = ["debug-render"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
